 * Modified set_project.php to avoid double refresh when using IIS.
 * Modified project user module behavior.
 * Modified delete file attachments to chmod( 0775 ) so write permissions are granted.
 * Modified get_view_redirect_url() call on bug_assign.php to handle redirects better.
 * Modified search to look in bugnotes.
 * Modified is_duplicate_category().  Reversed the arguments.
 * Added Hungarian translation.
 * Added Japanese translation.
 * Added Czech translation.
 * Added g_bug_link_tag to let users customize how to create bug links.
 * Added a "jump to bugnotes" quicklink at the top of the view bug pages.
 * Added a global option to control what access levels can delete bugs.
 * Added g_bug_move_access_level to control what access level can move bugs to other projects.
 * Added extra link after a bug report to go directly to the new bug.
 * Added g_close_bug_threshold for closing a bug.
 * Added print report link to view all bug page.
 * Added g_allowed_files and g_disallowed_files to control what files types may be uploaded.
 * Added user to project multi-select listbox in manage section.
 * Added list of projects  a user is assigned to to the account page.
 * Added print bug view.
 * Added jump to bug form.
 * Added core_proj_user_API.php.
 * Added make_lf_crlf() to remove bare line feeds.
 * Added g_strip_bare_lf to toggle use of make_lf_crlf().
 * Added priority reporting on the report form for developers.
 * Added project category copy.
 * Removed access_min and access threshold concepts from the user and project management.
 * Removed extra "echo" in news archive page.
 * Removed proj_user_delete_page.php.
 * Removed dependency on s_ enum strings.  Use g_ enum strings instead.
 * Updated Copyright to 2002.
 * Added $g_use_javascript to default/config_inc1.php (SC)

03.15.2002  -   0.17.1

 * Fixed missing closing span tag in view_bug_*page.php.
 * Fixed advanced summaries (jpgraph) for general statistics for all projects.