@@ -26,6 +26,37 @@
 		}
 	}
 	# --------------------
+	function category_add( $p_project_id, $p_category ) {
+		global $g_mantis_project_category_table;
+
+		$query = "INSERT
+				INTO $g_mantis_project_category_table
+				( project_id, category )
+				VALUES
+				( '$p_project_id', '$p_category' )";
+		return db_query( $query );
+	}
+	# --------------------
+	function category_update( $p_project_id, $p_category, $p_orig_category ) {
+		global $g_mantis_project_category_table;
+
+		$query = "UPDATE $g_mantis_project_category_table
+				SET category='$p_category'
+				WHERE category='$p_orig_category' AND
+					  project_id='$p_project_id'";
+		return db_query( $query );
+	}
+	# --------------------
+	function category_delete( $p_project_id, $p_category ) {
+		global $g_mantis_project_category_table;
+
+		$query = "DELETE
+				FROM $g_mantis_project_category_table
+				WHERE project_id='$p_project_id' AND
+					  category='$p_category'";
+		return db_query( $query );
+	}
+	# --------------------
 	# return all categories for the specified project id
 	function category_get_all( $p_project_id ) {
 		global $g_mantis_project_category_table;
@@ -34,18 +65,6 @@
 				FROM $g_mantis_project_category_table
 				WHERE project_id='$p_project_id'
 				ORDER BY category";
-		return db_query( $query );
-	}
-	# --------------------
-	function category_add( $p_project_id, $p_category ) {
-		global $g_mantis_project_category_table;
-
-		# insert category
-		$query = "INSERT
-				INTO $g_mantis_project_category_table
-				( project_id, category )
-				VALUES
-				( '$p_project_id', '$p_category' )";
 		return db_query( $query );
 	}
 	# --------------------
